docs/api/qiskit/0.19/qiskit.qobj.PulseQobj.mdx
---
title: PulseQobj (v0.19)
description: API reference for qiskit.qobj.PulseQobj in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobj
---

# PulseQobj

<Class id="qiskit.qobj.PulseQobj" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/pulse_qobj.py" signature="PulseQobj(qobj_id, config, experiments, header=None)" modifiers="class">
  A Pulse Qobj.

  Instatiate a new Pulse Qobj Object.

  Each Pulse Qobj object is used to represent a single payload that will be passed to a Qiskit provider. It mirrors the Qobj the published [Qobj specification](https://arxiv.org/abs/1809.03452) for Pulse experiments.

  **Parameters**

  *   **qobj\_id** (*str*) – An identifier for the qobj
  *   **config** ([*PulseQobjConfig*](qiskit.qobj.PulseQobjConfig "qiskit.qobj.PulseQobjConfig")) – A config for the entire run
  *   **header** ([*QobjHeader*](qiskit.qobj.QobjHeader "qiskit.qobj.QobjHeader")) – A header for the entire run
  *   **experiments** (*list*) – A list of lists of [`PulseQobjExperiment`](qiskit.qobj.PulseQobjExperiment "qiskit.qobj.PulseQobjExperiment") objects representing an experiment

  ## Methods

  <span id="pulseqobj-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobj.from_dict" signature="PulseQobj.from_dict(data)" modifiers="classmethod">
    Create a new PulseQobj object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the PulseQobj to create. It will be in the same format as output by [`to_dict()`](qiskit.qobj.PulseQobj#to_dict "qiskit.qobj.PulseQobj.to_dict").

    **Returns**

    The PulseQobj from the input dictionary.

    **Return type**

    [PulseQobj](qiskit.qobj.PulseQobj "qiskit.qobj.PulseQobj")
  </Function>

  <span id="pulseqobj-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobj.to_dict" signature="PulseQobj.to_dict(validate=False)">
    Return a dictionary format representation of the Pulse Qobj.

    Note this dict is not in the json wire format expected by IBMQ and qobj specification because complex numbers are still of type complex. Also this may contain native numpy arrays. When serializing this output for use with IBMQ you can leverage a json encoder that converts these as expected. For example:

    ```python
    import json
    import numpy

    class QobjEncoder(json.JSONEncoder):
        def default(self, obj):
            if isinstance(obj, numpy.ndarray):
                return obj.tolist()
            if isinstance(obj, complex):
                return (obj.real, obj.imag)
            return json.JSONEncoder.default(self, obj)

    json.dumps(qobj.to_dict(), cls=QobjEncoder)
    ```

    **Parameters**

    **validate** (*bool*) – When set to true validate the output dictionary against the jsonschema for qobj spec.

    **Returns**

    A dictionary representation of the QasmQobj object

    **Return type**

    dict
  </Function>
</Class>

